[feat] Add test of leaf node API

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ if(BUILD_TESTING)
       tiresias.c
       test_recovery.c
       test_index_node.c
+      test_leaf_node.c
       test_scans.c
       test_dirty_scans.c
       test_options.c
@@ -22,6 +23,9 @@ if(BUILD_TESTING)
 
   add_executable(test_index_node test_index_node.c arg_parser.c)
   target_link_libraries(test_index_node "${PROJECT_NAME}")
+
+  add_executable(test_leaf_node test_leaf_node.c arg_parser.c)
+  target_link_libraries(test_leaf_node "${PROJECT_NAME}" ${DEPENDENCIES})
 
   add_executable(test_scans test_scans.c)
   target_link_libraries(test_scans "${PROJECT_NAME}")
