--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(BEFORE core db ../lib)
 
 add_executable(ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
                         driver/ycsbc.cc ../utilities/list.c)
-target_link_libraries(ycsb-edb "${PROJECT_NAME}" ${DEPENDENCIES})
+target_link_libraries(ycsb-edb "${PROJECT_NAME}")
 check_cxx_compiler_flag("-Wno-deprecated-array-compare"
                         DEPRECATED_ARRAY_COMPARE)
 if(DEPRECATED_ARRAY_COMPARE)
