--- a/cmake_utils/tests.cmake.in
+++ b/cmake_utils/tests.cmake.in
@@ -12,3 +12,6 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_test.sh
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_test.sh
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_test.sh
+  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tracer/)
