--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
             additional_dependencies: [pyright@1.1.208]
 
     - repo: https://github.com/jorisroovers/gitlint
-      rev: v0.18.0
+      rev: v0.19.0dev
       hooks:
           - id: gitlint
             stages: [commit-msg]
