[refactor] Add iterators for log_descriptor buffers

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -23,6 +23,7 @@ option(
 
 set(LIB_C_SOURCE_FILES
     allocator/allocator.c
+    allocator/log_structures.c
     allocator/kv_format.c
     allocator/redo_undo_log.c
     allocator/persistent_operations.c
