--- a/cmake_utils/check-compiler-flags.cmake.in
+++ b/cmake_utils/check-compiler-flags.cmake.in
@@ -47,3 +47,7 @@ check_c_compiler_flag("-fpeel-loops" PEEL_LOOPS)
 if(PEEL_LOOPS)
   string(APPEND CMAKE_C_FLAGS " -fpeel-loops")
 endif()
+check_c_compiler_flag("-funit-at-a-time" FUNIT_ATATIME)
+if(FUNIT_ATATIME)
+  string(APPEND CMAKE_C_FLAGS " -funit-at-a-time")
+endif()
