[fix] Fix Parallax build as dependency

--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -1,21 +1,20 @@
 include(CheckCXXCompilerFlag)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-include_directories(BEFORE core db ../lib)
+if(PARALLAX_BUILD_TESTING)
+  include_directories(BEFORE core db ../lib)
+  add_executable(ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
+                          driver/ycsbc.cc ../utilities/list.c)
+  target_link_libraries(ycsb-edb "${PROJECT_NAME}")
+  check_cxx_compiler_flag("-Wno-deprecated-array-compare"
+                          DEPRECATED_ARRAY_COMPARE)
+  if(DEPRECATED_ARRAY_COMPARE)
+    string(APPEND CMAKE_CXX_FLAGS " -Wno-deprecated-array-compare")
+  endif()
+  check_cxx_compiler_flag("-Wno-array-compare" ARRAY_COMPARE)
+  if(ARRAY_COMPARE)
+    string(APPEND CMAKE_CXX_FLAGS " -Wno-array-compare")
+  endif()
 
-add_executable(ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
-                        driver/ycsbc.cc ../utilities/list.c)
-target_link_libraries(ycsb-edb "${PROJECT_NAME}")
-check_cxx_compiler_flag("-Wno-deprecated-array-compare"
-                        DEPRECATED_ARRAY_COMPARE)
-if(DEPRECATED_ARRAY_COMPARE)
-  string(APPEND CMAKE_CXX_FLAGS " -Wno-deprecated-array-compare")
-endif()
-check_cxx_compiler_flag("-Wno-array-compare" ARRAY_COMPARE)
-if(ARRAY_COMPARE)
-  string(APPEND CMAKE_CXX_FLAGS " -Wno-array-compare")
-endif()
-
-if(BUILD_TESTING)
   set(RECORD_COUNT 400000)
   set(OPERATION_COUNT 400000)
 
