--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,7 +37,7 @@ repos:
 
 
     - repo: https://github.com/psf/black
-      rev: 22.12.0
+      rev: 23.3.0
       hooks:
           - id: black
 
@@ -52,7 +52,7 @@ repos:
             additional_dependencies: [pyright@1.1.208]
 
     - repo: https://github.com/jorisroovers/gitlint
-      rev: v0.19.0dev
+      rev: v0.19.1
       hooks:
           - id: gitlint
             stages: [commit-msg]
@@ -60,7 +60,7 @@ repos:
             args: [--msg-filename]
 
     - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-      rev: 0.2.2
+      rev: 0.2.3
       hooks:
           - id: yamlfmt
             exclude: options.yml
