[fix] Set build type to release when parallax is a dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,17 @@ if(NOT (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR}))
 endif()
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-  message(STATUS "Setting build type to Debug as none was specified.")
+  message(STATUS "Setting build type to Release as none was specified.")
   set(CMAKE_BUILD_TYPE
-      "Debug"
+      "Release"
       CACHE STRING "Choose the type of build." FORCE)
   # Set the possible values of build type for cmake-gui
   set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release"
                                                "MinSizeRel" "RelWithDebInfo")
+endif()
+if(NOT (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR}))
+  set(CMAKE_BUILD_TYPE Release)
+  add_definitions(-DDISABLE_LOGGING)
 endif()
 
 message(
