[fix] Install structures.h header

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -85,6 +85,10 @@ install(
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
   PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+
+install(FILES include/parallax/parallax.h include/parallax/structures.h
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+
 set_target_properties(${LIB} PROPERTIES OUTPUT_NAME ${LIB})
 
 if(RUN_IWYU STREQUAL "ON")
