--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,26 @@ if(NOT libbloom_POPULATED)
   FetchContent_MakeAvailable(libbloom)
 endif()
 
+
 set(DEPENDENCIES log yaml libbloom)
+
+# Find pthread library
+find_package(Threads REQUIRED)
+list(APPEND DEPENDENCIES "${CMAKE_THREAD_LIBS_INIT}")
+
+find_library(LIBRT rt REQUIRED)
+list(APPEND DEPENDENCIES "${LIBRT}")
+
+find_library(LIBM m REQUIRED)
+list(APPEND DEPENDENCIES "${LIBM}")
+
+find_library(LIBNUMA numa REQUIRED)
+list(APPEND DEPENDENCIES "${LIBNUMA}")
+
+find_library(LIBUTIL util REQUIRED)
+list(APPEND DEPENDENCIES "${LIBUTIL}")
+
+
 
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utilities)
@@ -173,8 +192,9 @@ endif()
 string(APPEND CMAKE_C_FLAGS_DEBUG " -ggdb3 -Og -gz")
 string(APPEND CMAKE_C_FLAGS_RELEASE " -O2 -finline-functions -DNDEBUG")
 string(APPEND CMAKE_CXX_FLAGS_RELEASE " -std=gnu++11 -Wall")
-string(APPEND CMAKE_EXE_LINKER_FLAGS
-       " -Wl,--no-as-needed -lrt -lm -pthread -lnuma -lutil")
+# string(APPEND CMAKE_EXE_LINKER_FLAGS
+#        " -Wl,--no-as-needed -lrt -lm -pthread -lnuma -lutil")
+string(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,--no-as-needed")
 
 add_subdirectory(lib)
 add_subdirectory(YCSB-CXX)
