--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -261,6 +261,9 @@ if(PARALLAX_BUILD_TESTING)
   add_parallax_test(NAME test_optional_logging COMMAND run_test.sh
                     test_optional_logging)
 
+  add_executable(test_wal test_wal.c)
+  target_link_libraries(test_wal "${PROJECT_NAME}")
+
   add_executable(test_par_format test_par_format.c arg_parser.c)
   target_link_libraries(test_par_format "${PROJECT_NAME}")
   add_parallax_test(NAME test_par_format COMMAND run_test.sh test_par_format)
